Contrast conflicts fixed

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -28,7 +28,7 @@ form {
 }
 
 form label {
-    color: #5DA9C1;
+    color: #000000;
     font-size: 2rem;
     font-weight: 600;
     text-transform: uppercase;
@@ -53,7 +53,7 @@ form button {
 }
 
 form button {
-    color: #ffffff;
+    color: #000000;
     border: 1px solid #5DA9C1;
     border-radius: 10px;
     padding: 5px 20px;
@@ -62,8 +62,8 @@ form button {
 }
 
 form button:hover {
-    color: #5DA9C1;
-    border: 1px solid #ffffff;
+    color: #000000;
+    border: 1px solid #000000;
     background-color: #ffffff;
 }
 
