--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -38,12 +38,12 @@
 
 .header h2 a {
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
 }
 
 .header h2 a:hover {
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
 }
 
 .banner {
