--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -52,7 +52,7 @@
 .mediaTextContainer h4,
 .mediaTextContainer h5 {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.6rem;
 }
 
 .listImg {
